# src/main/java/co/edu/uniquindio/proyecto/application/dto/request/IniciarAtencionRequest.java
@@ -1,9 +1,4 @@
 package co.edu.uniquindio.proyecto.application.dto.request;
 
-import jakarta.validation.constraints.NotBlank;
-
-public record IniciarAtencionRequest(
-        @NotBlank(message = "El ID del funcionario es requerido")
-        String funcionarioId
-) {
+public record IniciarAtencionRequest() {
 }
