# src/main/java/co/edu/uniquindio/proyecto/infrastructure/security/service/PasswordHasherAdapter.java
@@ -1,0 +1,18 @@
+package co.edu.uniquindio.proyecto.infrastructure.security.service;
+
+import co.edu.uniquindio.proyecto.application.security.PasswordHasher;
+import lombok.RequiredArgsConstructor;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Component;
+
+@Component
+@RequiredArgsConstructor
+public class PasswordHasherAdapter implements PasswordHasher {
+
+    private final PasswordEncoder passwordEncoder;
+
+    @Override
+    public String hash(String rawPassword) {
+        return passwordEncoder.encode(rawPassword);
+    }
+}
